--- a/style.css
+++ b/style.css
@@ -55,5 +55,30 @@ body{
       padding: 0;
       text-align: center;
       font-family: Arial, Helvetica, sans-serif;
-
    }
+   section{
+    width: 90vw;
+    height: auto;
+    padding: 30px;
+    background-color: black;
+    margin: 10px auto;
+    border: 1px solid white;
+    border-radius: 10px;
+    text-align: center;
+}
+footer{
+width: 90vw;
+height: auto;
+padding: 20px;
+background-color: black;
+margin: 10px auto;
+border: 1px solid white;
+border-radius: 10px;
+text-align: center;
+}
+article{
+  width: 80vw;
+  height: auto;
+  padding: 10px;
+  background-color: black;
+}
